# ImageClipFactory.py

./: .gitignore  README.md  pyproject.toml
imageclip_factory/: GaussianBlur.py  MoveClipHorizontally.py  __init__.py  example.py  image_clip_factory.py
